# bas

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md
ballspot-challenge-api/: Dockerfile  README.md  pyproject.toml
ballspot-challenge-api/app/: __init__.py  main.py  schemas.py  service.py  settings.py
ballspot-challenge-api/app/postprocessing/: README.md  __init__.py  action_labels.py  confidence.py  context.py  dedupe.py  types.py
ballspot-challenge-api/config/: app.example.json  app.json
scripts/: start-ballspot-api.sh
