[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ballspot-challenge-api"
version = "0.1.0"
description = "FastAPI challenge server wrapping custom-ballspotting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic-settings>=2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
